fix: blue contrast

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -61,7 +61,7 @@ $primary-color: #000;
 $action-color: $primary-color;
 $white-color: #fff;
 $black-color: #000;
-$blue-color: #0086B3;
+$blue-color: #007399;
 $dark-gray-color: #333;
 $medium-gray-color: #999;
 $light-gray-color: #ccc;
